--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,10 +2,10 @@
 
 ---
 
-<header class="flex justify-between items-center py-3 px-4 mx-auto border-b min-w-full border-b-zinc-700">
+<header class="flex justify-between items-center py-2 px-4 mx-auto border-b min-w-full border-b-zinc-700">
   <div class="flex flex-row gap-x-4 items-center">
-    <img class="w-12 h-12" src="/assets/logo.png" alt="Logo Martelli Dev"/>
-    <div class="text-2xl flex flex-col space-y-[-5px]">
+    <img class="w-10 h-10" src="/assets/logo.png" alt="Logo Martelli Dev"/>
+    <div class="text-xl flex flex-col space-y-[-7px]">
       <p>SANTIAGO</p>
       <p>MARTELLI</p>
     </div>
