--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,13 +2,13 @@
 import Layout from "../layouts/Layout.astro";
 ---
 
-<Layout title="Santiago Martelli | Desarrollador Web">
-  <main class="flex-grow">
-    <section class="w-full h-full mx-auto lg:w-[740px] md:w-[600px] py-44">
-      <h1 class="text-white text-5xl font-bold flex flex-row gap-x-4 pb-8">
+<Layout title="Santiago Martelli | Programador y Desarrollador Web"
+description="Hola! Soy Santiago Martelli, un programador y desarrollador web con conocimientos de HTML, CSS, JavaScript, Vue.js, Php, Laravel, MySQL y más. Disponible para trabajar!">
+    <section class="mx-auto lg:w-[740px] md:w-[600] w-[calc(100%-10px)] h-[calc(100%-10px)] max-h-[calc(100%-10px)] overflow-auto flex flex-col justify-center">
+      <h1 class="text-4xl flex flex-row gap-x-4 pb-6 text-white">
         Hola, soy Santiago
       </h1>
-      <h2 class="text-xl opacity-80">
+      <h2 class=" text-lg opacity-80 text-white">
         Desarrollador de Aplicaciones Web motivado, entusiasta y con una sólida formación teórica. Aunuqe a
         simple vista mi experiencia parezca limitada, cuento con proyectos personales que muestran mis capacidades para
         construir páginas web tanto estáticas como dinámicas, brindando soluciones limpias e innovadoras a problemas
@@ -16,5 +16,4 @@ import Layout from "../layouts/Layout.astro";
 				aportar valor a cualquier equipo de trabajo.
       </h2>
     </section>
-  </main>
 </Layout>
