--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,18 +2,14 @@
 
 ---
 
-<header class="flex justify-between items-center py-2 px-4 mx-auto border-b min-w-full border-b-zinc-700">
-  <div class="flex flex-row gap-x-4 items-center">
-    <img class="w-10 h-10" src="/assets/logo.png" alt="Logo Martelli Dev"/>
-    <div class="text-xl flex flex-col space-y-[-7px]">
-      <p>SANTIAGO</p>
-      <p>MARTELLI</p>
-    </div>
+<header class="flex justify-between items-center mx-auto border-b min-w-full border-b-zinc-700 text-white">
+  <div class="min-w-60 h-full border-r border-r-zinc-700 py-3">
+    <p class="text-xl px-4">martelli.dev</p>
   </div>
-  <nav class="flex flex-row gap-x-10 opacity-90">
-      <a href="/">Home</a>
-      <a href="/about">Sobre Mí</a>
-      <a href="/projects">Proyectos</a>
-      <a href="/contact">Contacto</a>
+  <nav class="flex flex-row gap-x-10 opacity-90 px-4">
+    <a href="/">Home</a>
+    <a href="/about">Sobre Mí</a>
+    <a href="/projects">Proyectos</a>
+    <a href="/contact">Contacto</a>
   </nav>
 </header>
