--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -5,25 +5,28 @@ import Footer from "../components/Footer.astro";
 
 interface Props {
   title: string;
+  description: string;
 }
 
-const { title } = Astro.props;
+const { description, title } = Astro.props;
 ---
 
 <!doctype html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <meta name="description" content="Astro description" />
+    <meta name="description" content={description} />
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
   </head>
-  <body>
-    <div class="m-5 border border-zinc-700 bg-zinc-950 min-h-screen flex flex-col">
+  <body class="bg-black h-screen flex flex-col">
+    <div class="mx-8 my-8 border flex flex-col border-zinc-700 bg-zinc-950 flex-grow overflow-hidden">
       <Header />
-      <slot />
+      <main class="flex-grow animate-fadeIn overflow-auto">
+        <slot />
+      </main>
       <Footer />
     </div>
   </body>
@@ -33,11 +36,20 @@ const { title } = Astro.props;
     color-scheme: light dark;
   }
 
+  *, *::before, *::after {
+    box-sizing: border-box;
+  }
+  body, html {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    width: 100%;
+  }
+
   body {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    min-height: 100vh;
   }
 
   html {
