Mejorada la página de proyectos, todavia en construcción

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -4,7 +4,7 @@ import LinkedIn from "../icons/LinkedIn.astro";
 import GitHub from "../icons/GitHub.astro";
 ---
 
-<div class="flex justify-between border-t border-zinc-700">
+<div class="flex justify-between border-t border-zinc-700 text-zinc-300">
   <div class="flex">
     <div class="p-2 border-r border-zinc-700 hover:bg-zinc-900">
       <a href="https://www.linkedin.com/in/santiagomartelli/" class="flex gap-x-2 text-xs items-center">
