--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ description="Hola! Soy Santiago Martelli, un programador y desarrollador web con
       <h1 class="text-4xl flex flex-row gap-x-4 pb-6 text-white">
         Hola, soy Santiago
       </h1>
-      <h2 class=" text-lg opacity-80 text-white">
+      <h2 class=" text-lg opacity-80 text-zinc-300">
         Desarrollador de Aplicaciones Web motivado, entusiasta y con una sólida formación teórica. Aunuqe a
         simple vista mi experiencia parezca limitada, cuento con proyectos personales que muestran mis capacidades para
         construir páginas web tanto estáticas como dinámicas, brindando soluciones limpias e innovadoras a problemas
