--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -28,28 +28,32 @@ import Card from "../components/Card.astro";
     <section class="grid grid-cols-1 w-full md:grid-cols-2 lg:grid-cols-4 gap-4">
       <Card
         image="https://tanyamartelli.com/img/logo.8ddecaf7.jpg"
-        title="Tanya Martelli Photography"
+        title="Tanya Martelli"
+        title2="Photography"
         body="Sitio web de fotografía de Tanya Martelli"
         href="https://tanyamartelli.com"
       />
       <Card
         image="https://tanyamartelli.com/img/logo.8ddecaf7.jpg"
-        title="Santiago Martelli"
+        title="Portfolio"
+        title2="Santiago Martelli"
         body="Sitio web personal de Santiago Martelli"
         href="https://santiagomartelli.com"
       />
-      <Card
+      <!-- <Card
         image="https://tanyamartelli.com/img/logo.8ddecaf7.jpg"
-        title="Santiago Martelli Blog"
+        title="Santiago Martelli"
+        title2="Blog"
         body="Blog personal de Santiago Martelli"
         href="https://blog.santiagomartelli.com"
       />
       <Card
         image="https://tanyamartelli.com/img/logo.8ddecaf7.jpg"
-        title="Santiago Martelli Portfolio"
+        title="Santiago Martelli"
+        title2="Portfolio"
         body="Portfolio personal de Santiago Martelli"
         href="https://portfolio.santiagomartelli.com"
-      />
+      /> -->
     </section>
   </div>
   <!-- </div> -->
