--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -1,26 +1,30 @@
 ---
 interface Props {
   title: string;
+  title2: string;
   body: string;
   href: string;
   image: string;
 }
 
-const { href, title, body, image } = Astro.props;
+const { href, title, title2, body, image } = Astro.props;
 ---
 
-<div class="border border-zinc-700 rounded-sm h-64 m-3">
-  <a href={href} class="flex flex-col">
-    <div class="h-32 pb-3 relative">
-      <img src={image} alt={title} class="w-full h-full object-cover rounded-t-sm" />
-      <div class="absolute inset-0 flex items-center justify-center bg-black bg-opacity-50">
-        <h2 class="text-white">
+<div class="border border-zinc-700 rounded-sm h-64 m-3 overflow-hidden transition-shadow duration-500 hover:shadow-white text-zinc-300">
+  <a href={href} class="flex flex-col h-full group">
+    <div class="h-32 relative overflow-hidden">
+      <img src={image} alt={title} class="w-full h-full object-cover rounded-t-sm transform scale-100 blur-sm opacity-50 transition-all duration-700 ease-in-out group-hover:scale-110 group-hover:blur-0 group-hover:opacity-100" />
+      <div class="absolute inset-0 flex flex-col items-center justify-center bg-black bg-opacity-10 transition-opacity duration-700 ease-in-out group-hover:bg-opacity-30">
+        <h2 class="text-white italic text-xl font-extrabold uppercase transition-opacity duration-700 ease-in-out group-hover:opacity-0">
           {title}
+        </h2>
+        <h2 class="text-white italic text-xl font-extrabold uppercase transition-opacity duration-700 ease-in-out group-hover:opacity-0">
+          {title2}
         </h2>
       </div>
     </div>
     <div class="h-32 flex justify-center items-center p-3">
-      <p class="text-white">
+      <p class="text-zinc-400">
         {body}
       </p>
     </div>
