--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,9 +2,9 @@
 
 ---
 
-<header class="flex justify-between items-center mx-auto border-b min-w-full border-b-zinc-700 text-white">
+<header class="flex justify-between items-center mx-auto border-b min-w-full border-b-zinc-700 text-zinc-300">
   <div class="min-w-60 h-full border-r border-r-zinc-700 py-3">
-    <p class="text-xl px-4">martelli.dev</p>
+    <p class="text-xl px-4 text-white">martelli.dev</p>
   </div>
   <nav class="flex flex-row gap-x-10 opacity-90 px-4">
     <a href="/">Home</a>
