--- a/src/components/Badge.astro
+++ b/src/components/Badge.astro
@@ -1,3 +1,3 @@
-<span class="bg-green-100 text-green-800 text-xs font-medium px-2.5 py-0.5 rounded flex items-center">
+<span class="bg-green-100 text-green-800 text-xs font-medium px-2.5 rounded flex items-center">
   <slot/>
 </span>
