--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -4,30 +4,30 @@ import GitHub from "../icons/GitHub.astro";
 import Curriculum from "../icons/Curriculum.astro";
 ---
 
-<div class="flex justify-between border-t-[.5px] border-zinc-700">
+<div class="flex justify-between border-t-[.0px] border-zinc-700">
   <div class="flex">
-    <div class="py-2 px-4 border-r-[.5px] border-zinc-700 transition duration-75 ease-in hover:text-white">
+    <div class="px-4 transition duration-75 ease-in hover:text-white">
       <a href="https://www.linkedin.com/in/santiagomartelli/" class="flex gap-x-2 text-xs items-center">
         <LinkedIn class="size-4" />
         <p>LinkedIn</p>
       </a>
     </div>
-    <div class="py-2 px-4 border-r-[.5px] border-zinc-700 transition duration-75 ease-in hover:text-white">
+    <div class="px-4 transition duration-75 ease-in hover:text-white">
       <a href="https://github.com/santimartelli" class="flex gap-x-2 text-xs items-center">
         <GitHub class="size-4" />
         <p>GitHub</p>
       </a>
     </div>
-    <div class="py-2 px-4 border-r-[.5px] border-zinc-700 transition duration-75 ease-in hover:text-white">
+    <div class="px-4 transition duration-75 ease-in hover:text-white">
       <a href="#" class="flex gap-x-2 text-xs items-center">
         <Curriculum class="size-4" />
         <p>Descargar CV</p>
       </a>
     </div>
   </div>
-  <div class="p-2 border-l-[.5px] border-zinc-700 flex justify-center text-xs transition duration-75 ease-in hover:text-white">
+  <div class="px-4 flex justify-center text-xs transition duration-75 ease-in hover:text-white">
     <a href="https://www.linkedin.com/in/santiagomartelli/" target="_blank" class="flex justify-center items-center gap-1.5">
-      <div class="w-2 h-2 bg-green-600 rounded-full animate-blink hover:animate-none hover:bg-green-600"></div>
+      <div class="w-2 h-2 bg-green-600 rounded-full animate-blink"></div>
       Disponible para trabajar!
     </a>
   </div>
