--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,15 +2,15 @@
 
 ---
 
-<header class="flex justify-between items-center mx-auto border-b-[.5px] min-w-full border-b-zinc-700 ">
-  <div class="min-w-60 max-w-60 h-full border-r-[.5px] border-r-zinc-700 py-3">
+<header class="flex justify-between items-center mx-auto border-b-[.0px] min-w-full border-b-zinc-700">
+  <div class="h-full border-r-[.0px] border-r-zinc-700 py-3">
     <p class="text-lg px-4 text-white">LOGO</p>
   </div>
-  <nav class="flex flex-row gap-x-10 opacity-90 px-4 text-md">
-    <a href="/" class="transition duration-75 ease-in hover:text-white">Home</a>
-    <a href="/about" class="transition duration-75 ease-in hover:text-white">Sobre Mí</a>
-    <a href="/projects" class="transition duration-75 ease-in hover:text-white">Proyectos</a>
-    <a href="/contact" class="transition duration-75 ease-in hover:text-white">Contacto</a>
+  <nav class="flex flex-row gap-x-10 opacity-90 px-4 text-sm uppercase italic">
+    <a href="/" class="transition duration-75 ease-in hover:text-white">_Inicio</a>
+    <a href="/about" class="transition duration-75 ease-in hover:text-white">_Sobre Mí</a>
+    <a href="/projects" class="transition duration-75 ease-in hover:text-white">_Proyectos</a>
+    <a href="/contact" class="transition duration-75 ease-in hover:text-white">_Contacto</a>
   </nav>
 </header>
 
