--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -6,26 +6,7 @@ import Card from "../components/Card.astro";
 <Layout
   title="Santiago Martelli | Proyectos"
   description="Hola! Soy Santiago Martelli, un programador y desarrollador web con conocimientos de HTML, CSS, JavaScript, Vue.js, Php, Laravel, MySQL y más. Disponible para trabajar!">
-  <div class="flex flex-row h-full">
-    <section class="min-w-60 border-r-[.5px] border-zinc-700 flex flex-col">
-      <div class="border-b-[.5px] border-b-zinc-700">
-        <h1 class="py-2 pl-4 text-zinc-300">Proyectos</h1>
-      </div>
-      <div class="py-1 mt-5 pl-6 text-sm hover:bg-zinc-900 hover:text-white">
-        <a href="/proyectos" class="">Todos</a>
-      </div>
-      <div class="py-1 pl-6 text-sm hover:bg-zinc-900 hover:text-white">
-        <a href="/proyectos/Vue" class="">Vue</a>
-      </div>
-      <div class="py-1 pl-6 text-sm hover:bg-zinc-900 hover:text-white">
-        <a href="/proyectos/Laravel" class="">Laravel</a>
-      </div>
-      <div class="py-1 pl-6 text-sm hover:bg-zinc-900 hover:text-white">
-        <a href="/proyectos/Astro" class="">Astro</a>
-      </div>
-    </section>
-    <div class="max-h-screen">
-    <section class="grid grid-cols-1 w-full sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6 p-4">
+    <section class="mx-auto flex flex-row justify-center gap-10 flex-wrap">
       <Card
         image="https://tanyamartelli.com/img/logo.8ddecaf7.jpg"
         title="Tanya Martelli"
@@ -40,21 +21,5 @@ import Card from "../components/Card.astro";
         body="Sitio web personal de Santiago Martelli"
         href="https://santiagomartelli.com"
       />
-      <!-- <Card
-        image="https://tanyamartelli.com/img/logo.8ddecaf7.jpg"
-        title="Santiago Martelli"
-        title2="Blog"
-        body="Blog personal de Santiago Martelli"
-        href="https://blog.santiagomartelli.com"
-      />
-      <Card
-        image="https://tanyamartelli.com/img/logo.8ddecaf7.jpg"
-        title="Santiago Martelli"
-        title2="Portfolio"
-        body="Portfolio personal de Santiago Martelli"
-        href="https://portfolio.santiagomartelli.com"
-      /> -->
     </section>
-  </div>
-  <!-- </div> -->
 </Layout>
