--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -19,7 +19,7 @@ import Card from "../components/Card.astro";
         title="Portfolio"
         title2="Santiago Martelli"
         body="Sitio web personal de Santiago Martelli"
-        href="https://santiagomartelli.com"
+        href="https://martelli.dev"
       />
     </section>
 </Layout>
