--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,13 +6,183 @@ import Layout from "../layouts/Layout.astro";
   title="Santiago Martelli | Programador y Desarrollador Web"
   description="Hola! Soy Santiago Martelli, un programador y desarrollador web con conocimientos de HTML, CSS, JavaScript, Vue.js, Php, Laravel, MySQL y más. Disponible para trabajar!">
   <section class="flex flex-col justify-center items-center gap-y-3">
-    <div class="flex flex-col items-center p-10 rounded-md">
-      <h1 class="text-white text-3xl sn:text-2xl md:text-4xl lg:text-6xl pb-6">SANTIAGO MARTELLI</h1>
-      <h1 class="text-white text-2xl sn:text-xl md:text-3xl lg:text-5xl"><span>&gt; </span>Desarrollador Web</h1>
+    <div class="flex flex-col items-center pb-10">
+      <div class="decode-text text-white">
+        <div class="text-animation text-2xl sm:text-xl md:text-4xl lg:text-5xl xl:text-7xl">S</div>
+        <div class="text-animation text-2xl sm:text-xl md:text-4xl lg:text-5xl xl:text-7xl">A</div>
+        <div class="text-animation text-2xl sm:text-xl md:text-4xl lg:text-5xl xl:text-7xl">N</div>
+        <div class="text-animation text-2xl sm:text-xl md:text-4xl lg:text-5xl xl:text-7xl">T</div>
+        <div class="text-animation text-2xl sm:text-xl md:text-4xl lg:text-5xl xl:text-7xl">I</div>
+        <div class="text-animation text-2xl sm:text-xl md:text-4xl lg:text-5xl xl:text-7xl">A</div>
+        <div class="text-animation text-2xl sm:text-xl md:text-4xl lg:text-5xl xl:text-7xl">G</div>
+        <div class="text-animation text-2xl sm:text-xl md:text-4xl lg:text-5xl xl:text-7xl">O</div>
+        <div class="space"></div>
+        <div class="text-animation text-2xl sm:text-2xl md:text-4xl lg:text-5xl xl:text-7xl">M</div>
+        <div class="text-animation text-2xl sm:text-2xl md:text-4xl lg:text-5xl xl:text-7xl">A</div>
+        <div class="text-animation text-2xl sm:text-2xl md:text-4xl lg:text-5xl xl:text-7xl">R</div>
+        <div class="text-animation text-2xl sm:text-2xl md:text-4xl lg:text-5xl xl:text-7xl">T</div>
+        <div class="text-animation text-2xl sm:text-2xl md:text-4xl lg:text-5xl xl:text-7xl">E</div>
+        <div class="text-animation text-2xl sm:text-2xl md:text-4xl lg:text-5xl xl:text-7xl">L</div>
+        <div class="text-animation text-2xl sm:text-2xl md:text-4xl lg:text-5xl xl:text-7xl">L</div>
+        <div class="text-animation text-2xl sm:text-2xl md:text-4xl lg:text-5xl xl:text-7xl">I</div>
+        <div class="line-jump"></div>
+        <br />
+        <div class="text-animation text-xl sm:text-lg md:text-xl lg:text-2xl xl:text-4xl pr-2"><span>&gt; </span></div>
+        <div class="text-animation text-xl sm:text-lg md:text-xl lg:text-2xl xl:text-4xl">D</div>
+        <div class="text-animation text-xl sm:text-lg md:text-xl lg:text-2xl xl:text-4xl">e</div>
+        <div class="text-animation text-xl sm:text-lg md:text-xl lg:text-2xl xl:text-4xl">s</div>
+        <div class="text-animation text-xl sm:text-lg md:text-xl lg:text-2xl xl:text-4xl">a</div>
+        <div class="text-animation text-xl sm:text-lg md:text-xl lg:text-2xl xl:text-4xl">r</div>
+        <div class="text-animation text-xl sm:text-lg md:text-xl lg:text-2xl xl:text-4xl">r</div>
+        <div class="text-animation text-xl sm:text-lg md:text-xl lg:text-2xl xl:text-4xl">o</div>
+        <div class="text-animation text-xl sm:text-lg md:text-xl lg:text-2xl xl:text-4xl">l</div>
+        <div class="text-animation text-xl sm:text-lg md:text-xl lg:text-2xl xl:text-4xl">a</div>
+        <div class="text-animation text-xl sm:text-lg md:text-xl lg:text-2xl xl:text-4xl">d</div>
+        <div class="text-animation text-xl sm:text-lg md:text-xl lg:text-2xl xl:text-4xl">o</div>
+        <div class="text-animation text-xl sm:text-lg md:text-xl lg:text-2xl xl:text-4xl">r</div>
+        <div class="space"></div>
+        <div class="text-animation text-xl sm:text-lg md:text-xl lg:text-2xl xl:text-4xl">W</div>
+        <div class="text-animation text-xl sm:text-lg md:text-xl lg:text-2xl xl:text-4xl">e</div>
+        <div class="text-animation text-xl sm:text-lg md:text-xl lg:text-2xl xl:text-4xl">b</div>
+      </div>
     </div>
-    <p class="mt-8 text-center text-md">
-      Gracias por visitar mi página, te invito a que conozcas más <span><a href="/about" class="text-white hover:underline">sobre mí</a></span> para conocer mis habilidades y a que explores mis
-      últimos <a href="/projects" class="text-white hover:underline">proyectos</a>.
-    </p>
   </section>
+  <!-- <h1 class="text-white text-3xl sn:text-2xl md:text-4xl lg:text-6xl pb-6">SANTIAGO MARTELLI</h1>
+      <h1 class="text-white text-2xl sn:text-xl md:text-3xl lg:text-5xl"><span>&gt; </span>Desarrollador Web</h1> -->
+  <p class="mt-8 text-center text-md animate-enterUp text-zinc-500">
+    Gracias por visitar mi Web. te invito a que conozcas más <span
+      ><a href="/about" class="text-zinc-400 hover:underline">sobre mí</a></span
+    > y a explorar todos los detalles de mis mis últimos <a href="/projects" class="text-zinc-400 hover:underline"
+      >proyectos</a
+    >. También puedes visitar mi <a href="#" class="text-zinc-400 hover:underline">GitHub</a> para ver más de mi trabajo.
+  </p>
 </Layout>
+
+<script>
+  /* ------------------------------------------------------------------------ *
+4 states per letter: Transparent | Line | Block | Visible.
+These states are shuffled for a unique "decode" effect each time.
+* ------------------------------------------------------------------------ */
+
+  function decodeText() {
+    var text = document.getElementsByClassName("decode-text")[0];
+    // debug with
+    // console.log(text, text.children.length);
+
+    // assign the placeholder array its places
+    var state = [];
+    for (var i = 0, j = text.children.length; i < j; i++) {
+      text.children[i].classList.remove("state-1", "state-2", "state-3");
+      state[i] = i;
+    }
+
+    // shuffle the array to get new sequences each time
+    var shuffled = shuffle(state);
+
+    for (var i = 0, j: number = shuffled.length; i < j; i++) {
+      var child = text.children[shuffled[i]];
+      var classes = child.classList;
+
+      // fire the first one at random times
+      var state1Time = Math.round(Math.random() * 800);
+      if (classes.contains("text-animation")) {
+        setTimeout(firstStages.bind(null, child as HTMLElement), state1Time);
+      }
+    }
+  }
+
+  // send the node for later .state changes
+  function firstStages(child: HTMLElement) {
+    if (child.classList.contains("state-2")) {
+      child.classList.add("state-3");
+    } else if (child.classList.contains("state-1")) {
+      child.classList.add("state-2");
+    } else if (!child.classList.contains("state-1")) {
+      child.classList.add("state-1");
+      setTimeout(secondStages.bind(null, child), 100);
+    }
+  }
+  function secondStages(child: HTMLElement) {
+    if (child.classList.contains("state-1")) {
+      child.classList.add("state-2");
+      setTimeout(thirdStages.bind(null, child), 100);
+    } else if (!child.classList.contains("state-1")) {
+      child.classList.add("state-1");
+    }
+  }
+  function thirdStages(child: HTMLElement) {
+    if (child.classList.contains("state-2")) {
+      child.classList.add("state-3");
+    }
+  }
+
+  function shuffle(array: any[]) {
+    var currentIndex = array.length,
+      temporaryValue,
+      randomIndex;
+
+    // While there remain elements to shuffle...
+    while (0 !== currentIndex) {
+      // Pick a remaining element...
+      randomIndex = Math.floor(Math.random() * currentIndex);
+      currentIndex -= 1;
+
+      // And swap it with the current element.
+      temporaryValue = array[currentIndex];
+      array[currentIndex] = array[randomIndex];
+      array[randomIndex] = temporaryValue;
+    }
+    return array;
+  }
+
+  // Demo only stuff
+  decodeText();
+
+  // beware: refresh button can overlap this timer and cause state mixups
+  setInterval(function () {
+    decodeText();
+  }, 10000);
+</script>
+
+<style lang="scss">
+  .space {
+    display: inline-block;
+    width: 0.5em;
+  }
+  .text-animation {
+    display: inline-block;
+    position: relative;
+    color: transparent;
+    &:before {
+      content: "";
+      color: white;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      background: white;
+      // background: #a1a1aa; // zinc-400
+      width: 0;
+      height: 1.2em;
+      -webkit-transform: translate(-50%, -55%);
+      -ms-transform: translate(-50%, -55%);
+      transform: translate(-50%, -55%);
+    }
+
+    &.state-1 {
+      &:before {
+        width: 1px;
+      }
+    }
+    &.state-2 {
+      &:before {
+        width: 0.9em;
+      }
+    }
+    &.state-3 {
+      color: white;
+      &:before {
+        width: 0;
+      }
+    }
+  }
+</style>
