Mejoradas las animaciones de la barra de navegación

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,8 +5,8 @@ import Layout from "../layouts/Layout.astro";
 <Layout
   title="Santiago Martelli | Programador y Desarrollador Web"
   description="Hola! Soy Santiago Martelli, un programador y desarrollador web con conocimientos de HTML, CSS, JavaScript, Vue.js, Php, Laravel, MySQL y más. Disponible para trabajar!">
-  <section class="flex flex-col justify-center items-center gap-y-3">
-    <div class="flex flex-col items-center pb-10">
+  <section class="flex flex-col justify-center items-center">
+    <div class="flex flex-col items-center mb-10 lg:mb-20">
       <div class="decode-text text-white">
         <div class="text-animation text-2xl sm:text-xl md:text-4xl lg:text-5xl xl:text-7xl">S</div>
         <div class="text-animation text-2xl sm:text-xl md:text-4xl lg:text-5xl xl:text-7xl">A</div>
@@ -26,7 +26,6 @@ import Layout from "../layouts/Layout.astro";
         <div class="text-animation text-2xl sm:text-2xl md:text-4xl lg:text-5xl xl:text-7xl">L</div>
         <div class="text-animation text-2xl sm:text-2xl md:text-4xl lg:text-5xl xl:text-7xl">I</div>
         <div class="line-jump"></div>
-        <br />
         <div class="text-animation text-xl sm:text-lg md:text-xl lg:text-2xl xl:text-4xl pr-2"><span>&gt; </span></div>
         <div class="text-animation text-xl sm:text-lg md:text-xl lg:text-2xl xl:text-4xl">D</div>
         <div class="text-animation text-xl sm:text-lg md:text-xl lg:text-2xl xl:text-4xl">e</div>
@@ -47,14 +46,12 @@ import Layout from "../layouts/Layout.astro";
       </div>
     </div>
   </section>
-  <!-- <h1 class="text-white text-3xl sn:text-2xl md:text-4xl lg:text-6xl pb-6">SANTIAGO MARTELLI</h1>
-      <h1 class="text-white text-2xl sn:text-xl md:text-3xl lg:text-5xl"><span>&gt; </span>Desarrollador Web</h1> -->
-  <p class="mt-8 text-center text-md animate-enterUp text-zinc-500">
-    Gracias por visitar mi Web. te invito a que conozcas más <span
+  <p class="text-justify text-md animate-enterUp">
+    /* Gracias por visitar mi Web. te invito a que conozcas más <span
       ><a href="/about" class="text-zinc-400 hover:underline">sobre mí</a></span
     > y a explorar todos los detalles de mis mis últimos <a href="/projects" class="text-zinc-400 hover:underline"
       >proyectos</a
-    >. También puedes visitar mi <a href="#" class="text-zinc-400 hover:underline">GitHub</a> para ver más de mi trabajo.
+    >. También puedes visitar mi <a href="#" class="text-zinc-400 hover:underline">GitHub</a> para ver más de mi trabajo. */
   </p>
 </Layout>
 
