Mejoras generales en los estilos

--- a/src/components/Badge.astro
+++ b/src/components/Badge.astro
@@ -1,3 +1,3 @@
-<span class="bg-transparent text-xs px-2.5 py-1 rounded-sm flex items-center border-[.5px] border-zinc-700 transition duration-75 ease-in hover:text-white">
+<span class="text-xs px-2.5 py-1 rounded-sm flex items-center border-[.5px] border-zinc-700 transition duration-75 ease-in hover:text-white">
   <slot/>
 </span>
