--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -46,12 +46,12 @@ import Layout from "../layouts/Layout.astro";
       </div>
     </div>
   </section>
-  <p class="text-justify text-md animate-enterUp">
-    /* Gracias por visitar mi Web. te invito a que conozcas más <span
+  <p class="text-justify text-md animate-enterUp text-pretty">
+    Gracias por visitar mi Web. te invito a que conozcas más <span
       ><a href="/about" class="text-zinc-400 hover:underline">sobre mí</a></span
     > y a explorar todos los detalles de mis mis últimos <a href="/projects" class="text-zinc-400 hover:underline"
       >proyectos</a
-    >. También puedes visitar mi <a href="#" class="text-zinc-400 hover:underline">GitHub</a> para ver más de mi trabajo. */
+    >. También puedes visitar mi <a href="#" class="text-zinc-400 hover:underline">GitHub</a> para ver más de mi trabajo.
   </p>
 </Layout>
 
