--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -7,7 +7,7 @@ import Badge from "../components/Badge.astro";
 description="Hola! Soy Santiago Martelli, un programador y desarrollador web con conocimientos de HTML, CSS, JavaScript, Vue.js, Php, Laravel, MySQL y más. Disponible para trabajar!">
     <section class="mx-auto flex flex-col justify-center">
       <h2 class="text-white pb-6"><span class="text-white">&gt;</span> Extracto</h2>
-      <p class="text-md pb-10">
+      <p class="text-md pb-10 text-pretty">
         Desarrollador de Aplicaciones Web motivado, entusiasta y con una sólida formación teórica. Aunuqe a
         simple vista mi experiencia parezca limitada, cuento con proyectos personales que muestran mis capacidades para
         construir páginas web tanto estáticas como dinámicas, brindando soluciones limpias e innovadoras a problemas
